#AP-1723, QA Env setup,#AP-1763 update navigation UI,#AP-1801 error handling while update user password,#AP-1803 activate workflow,#AP-1804 workflow overlapping issue,#AP-1808 save workflow name, header property name with ellipises

--- a/src/app/_components/customtabs/customtabs.component.scss
+++ b/src/app/_components/customtabs/customtabs.component.scss
@@ -21,6 +21,10 @@
     margin: 0 3px;
 }
 
+.customtab ul li:nth-child(2) {
+    margin-left: 15px !important;
+}
+
 .customtab ul li:last-child {
     margin-left: 0px !important;
 }
